// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemViewerFrame after page content is loaded 1`] = `
<div
  className="itemViewerFrame"
  tabIndex={0}
>
  <iframe
    className="itemviewer-iframe"
    id="itemviewer-iframe"
    onLoad={[Function]}
    onLoadStart={[Function]}
    src="http://test.com"
  />
</div>
`;

exports[`ItemViewerFrame matches snapshot while loading 1`] = `
<div
  className="itemViewerFrame"
  tabIndex={0}
>
  <div
    className="loader-icon"
  >
    <div
      className="loader"
    />
  </div>
  <iframe
    className="itemviewer-iframe"
    id="itemviewer-iframe"
    onLoad={[Function]}
    onLoadStart={[Function]}
    src="http://test.com"
  />
</div>
`;

exports[`ItemViewerFrame no item found 1`] = `
<div
  className="no-item"
>
  <p>
    No Item Found
  </p>
</div>
`;
